tests/ui/issues/issue-62375.stderr
error[E0369]: binary operation `==` cannot be applied to type `A`
  --> $DIR/issue-62375.rs:7:7
   |
LL |     a == A::Value;
   |     - ^^ -------- fn(()) -> A {A::Value}
   |     |
   |     A
   |
note: an implementation of `PartialEq<_>` might be missing for `A`
  --> $DIR/issue-62375.rs:1:1
   |
LL | enum A {
   | ^^^^^^ must implement `PartialEq<_>`
help: consider annotating `A` with `#[derive(PartialEq)]`
   |
LL | #[derive(PartialEq)]
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
